feat: Integrated with MongoDB

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -70,15 +70,20 @@
                   </a>
                   <h6>
                     돌아오신것을 환영합니다,<br />이용하려면 먼저 로그인
-                    해주세요.<br />아이디 : test1@gmail.com<br />
+                    해주세요.<br />아이디 : team2@mongo.com<br />
                     비밀번호 : 1234
                   </h6>
                   <div class="field-wrapper">
-                    <input type="email" autofocus name="username" value="" />
+                    <input
+                      type="email"
+                      autofocus
+                      name="username"
+                      value="team2@mongo.com"
+                    />
                     <div class="field-placeholder">이메일 계정</div>
                   </div>
                   <div class="field-wrapper mb-3">
-                    <input type="password" name="password" value="" />
+                    <input type="password" name="password" value="1234" />
                     <div class="field-placeholder">비밀번호</div>
                   </div>
                   <div class="actions">
